Added further projects / commented out Ollama